--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 
     <!-- For large devices  -->
     <header
+    style="background-image: url(Images/HeroS.png);"
       class="hidden md:block lg:block h-[130vh] w-full bg-[url('Images/HeroS.png')] bg-no-repeat bg-cover"
     >
      <!-- Navigation Bar here  -->
