--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <body>
     <!-- Small Devices  -->
     <header
+      style="background-image: url(Images/HeroSmall.png);"
       class="h-[60vh] w-full bg-[url('Images/HeroSmall.png')] bg-no-repeat bg-cover md:hidden lg:hidden"
     >
      <!-- Navigation Bar here   -->
@@ -36,7 +37,7 @@
             <li
               class="lg:mx-4 py-2 hover:underline transition-all ease-in hover:text-slate-200"
             >
-              <a class="rounded-3xl bg-blue-500 px-2 py-1 lg:px-4 lg:py-2 text-[10px] lg:text-base" href="#about">About Us</a>
+              <a class="rounded-3xl bg-blue-500 px-2 py-1 lg:px-4 lg:py-2 text-[10px] lg:text-base" href="#about">About</a>
             </li>
             <li
               class="lg:mx-4 py-2 hover:underline transition-all ease-in hover:text-slate-200"
