--- a/index.html
+++ b/index.html
@@ -314,7 +314,9 @@
           
           <div class="flex m-auto">
             <div class="">
-              <div class="text-white px-3 py-4 w-48 h-[15rem] bg-[url('Images/Service_1.png')] bg-no-repeat">
+              <div
+              style="background-image: url('Images/Service_1.png');"
+               class="text-white px-3 py-4 w-48 h-[15rem] bg-[url('Images/Service_1.png')] bg-no-repeat">
                 <p class="text-base font-semibold">1.</p>
                 <p class="text-base font-semibold">Surgery of impacted 3rd Molar</p>
                 <p class="text-slate-100 my-4 text-xs">We do Surgery for the last teeth which is hidden under gingiva or bellow occlusal level.</p>
