--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
 
           <div class="flex flex-col gap-y-4">
             <div class="bg-blue-50 w-72 px-4 py-9 shadow-xl">
-              <p class="text-xs italic">Clean environment and modern chamber. I am very happy with their services. Dr. Mondal is very humble and knowledgeable person. I personally recommend Happy smile dental clinic for any oral and maxillofacial problem.</p>
+              <p class="text-xs italic">Clean environment and modern chamber. I am very happy with their services. Dr.Lazarus is very humble and knowledgeable person. I personally recommend Today Dental Care for any oral and maxillofacial problem.</p>
               <h6 class="text-sm font-semibold mt-5 mb-2">Nasrin Mondal</h6>
             </div>
   
@@ -561,7 +561,7 @@
   
             <div class="bg-blue-50 w-72 px-4 py-9 shadow-xl">
               <p class="text-xs italic">
-                I had a great experience at the HAPPY SMILE DENTAL CLINIC . Dr.MONDAL was very friendly ,professional and knowledgeable .Thank you for your great service.</p>
+                I had a great experience at the Today Dental Care. Dr.Lazarus was very friendly ,professional and knowledgeable .Thank you for your great service.</p>
               <h6 class="text-sm font-semibold mt-5 mb-2">Anisha Dutta</h6>
             </div>
   
